@@ -39,7 +39,6 @@ Glines:
         - Configure the playing field size and ball number (bug
           83532).
         - Scalability.
-        - Remove the ball theme, perhaps, maybe.
 
 Gnect:
         - Graphics (could we share some with iagno/gataxx)
